# GraphicsEngine

./: CMakeLists.txt  README.md
data/shaders/: default.frag  default.vert  light.frag  light.vert  noLight.vert
include/: Application.hpp  Camera.hpp  ImageData.hpp  Light.hpp  Mesh.hpp  Shader.hpp  Texture.hpp  callbacks.hpp  meshes.hpp
include/maths/: Matrix4.hpp  constants.hpp  functions.hpp  transformations.hpp  vec2.hpp  vec3.hpp  vec4.hpp
src/: Application.cpp  Camera.cpp  ImageData.cpp  Light.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  callbacks.cpp  main.cpp  meshes.cpp
src/maths/: Matrix4.cpp  functions.cpp  transformations.cpp  vec2.cpp  vec3.cpp  vec4.cpp
